@@ -1,6 +1,9 @@
 package com.zg.common.util.url;
 
+import org.tinylog.Logger;
+
 import java.io.UnsupportedEncodingException;
+import java.nio.charset.StandardCharsets;
 
 public class URLUtils {
     public static String getURLEncoderString(String str) {
@@ -8,11 +11,7 @@ public class URLUtils {
         if (null == str) {
             return "";
         }
-        try {
-            result = java.net.URLEncoder.encode(str, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            e.printStackTrace();
-        }
+        result = java.net.URLEncoder.encode(str, StandardCharsets.UTF_8);
         return result;
     }
 
@@ -21,11 +20,7 @@ public class URLUtils {
         if (null == str) {
             return "";
         }
-        try {
-            result = java.net.URLDecoder.decode(str, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            e.printStackTrace();
-        }
+        result = java.net.URLDecoder.decode(str, StandardCharsets.UTF_8);
         return result;
     }
 }
